--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ section {
     /* margin-left: 2%; */
     color: #2196F3;
     clear: both;
+    visibility: hidden;
 }
 #weatherInfoArea {
     background-color: aliceblue;
