--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header {
     background-color: aliceblue;
     color:  #2196F3;
     text-align: center;
-    height: 70px;
+    /* height: 70px; */
     font-size: 40px;
     border-style: solid;
     border-width: 0px 0px px;
